# CcOSExampleProject

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CcOSImport.cmake  README.md  VERSION.cmake
CMakeConfig/: ProjectMacros.cmake
CMakeConfig/InputFiles/: ProjectVersion.rc.in
CcOSExampleProject/: CMakeLists.txt  CcOSExampleProject.cpp  CcOSExampleProject.h  main.cpp
CcOSExampleProject/Resources/: CcOSExampleProject.json.c
CcOSExampleProject/test/: CExampleTest.cpp  CMakeLists.txt  main.cpp
Software/: .gitignore  CMakeLists.txt  CcOSImport.cmake  VERSION.cmake
Software/CMakeConfig/: ProjectMacros.cmake
Software/CcOSExampleProject/: CcOSExampleProject.h
Software/CcOSExampleProject/Resources/: CcOSExampleProject.json.h
Software/CcOSExampleProject/test/: CExampleTest.cpp  CExampleTest.h  CMakeLists.txt
Software/Tools/: CreateProject.ps1
Tools/: CreateProject.ps1  Test-All.sh
Tools/Testing/: Test-MinGW.sh
